exports[`(.not).toHaveLengthRequiredStatus > using axios > .not.toHaveLengthRequiredStatus > fails when response have status code 411 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveLengthRequiredStatus()</intensity>

Expected status code to not be 411 received:
  <red>411</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 411,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveLengthRequiredStatus > using axios > .toHaveLengthRequiredStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveLengthRequiredStatus()</intensity>

Expected status code to be 411 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveLengthRequiredStatus > using got > .not.toHaveLengthRequiredStatus > fails when response have status code 411 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveLengthRequiredStatus()</intensity>

Expected status code to not be 411 received:
  <red>411</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 411,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveLengthRequiredStatus > using got > .toHaveLengthRequiredStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveLengthRequiredStatus()</intensity>

Expected status code to be 411 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
